[metadata]
name = rshf
version = 0.0.12
author = Srikumar Sastry
author_email = s.sastry@wustl.edu
description = RS pretrained models in huggingface style
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mvrl/rshf
keywords = Remote Sensing, Huggingface
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires = file: requirements.txt
